test_suite5/ALAN/test_suite/alan-2022-examples/failing/003800_mutation.alan
source d begin if 3250 then "" relax end end
